# useless

./: .gitignore  CMakeLists.txt  README.md  run.bat
include/: appaction.h  node.h  window.h  windowHeader.h  windowStruct.h
include/imemory/: baseObj.hpp  event.hpp  event.inl  gc.hpp  gc.inl  gcWorker.hpp  object.hpp
include/imemory/achieve/: baseObject.inl  event.inl  gc.inl  gcWorker.inl  object.inl
include/tools/: glmExt.hpp  log.hpp  log.inl  strExt.hpp  strExt.inl  threadExt.hpp  threadExt.inl  uuidExt.hpp  uuidExt.inl
include/tools/achieve/: log.inl  strExt.inl  threadExt.inl  uuidExt.inl
src/: appaction.cpp  node.cpp  window.cpp
src/linux/: window.cpp
src/windows/: window.cpp
src/xgraphical/opengl/include/: xgraphical.h
tests/: CMakeLists.txt
tests/helloworld/: CMakeLists.txt
tests/helloworld/include/: myAppaction.h  myObject.h
tests/helloworld/src/: main.cpp  myAppaction.cpp  myObject.cpp
xgraphical/: CMakeLists.txt  xgraphical.h  xgraphical.hpp
xgraphical/opengl/: init.cpp  xgraphical.cpp
xgraphical/opengl/linux/: xgraphical.cpp
xgraphical/opengl/windows/: xgraphical.cpp
xgraphical/vulkan/windows/: xgraphical.cpp
